* improved playlist mapping
* improved text scroller
* moved OSS4 support to separate plugin
* fixed playlist behavior (Avihay Baratz)
* fixed problems with large fonts in playlist
* fixed problems with invalid URLs
* fixed window WM_CLASS/WM_ROLE properties
* fixed format detection by mime type
* updated Russian translation
* updated Ukrainian translation (Gennadi Motsyo)
* updated Polish translation (Grzegorz Gibas)
* updated Japanese translation (Ryota Shimamoto)
* updated German translation (Panagiotis Papadopoulos)
* updated Spanish translation (Félix Medrano)
* updated Lithuanian translation (Algirdas Butkus)

Version 0.5.1
* added latest ffmpeg support
* added ac3 support
* added possibility to switch normal/shaded mode by double click (Panagiotis Papadopoulos)
* decreased startup delay
* fixed visualization bug
* fixed scrobbler plugin
* fixed build scripts
* fixed signals synchronization
* fixed mplayer support
* fixed segmentation fault in the alsa settings dialog
* fixed broken mpris2
* fixed windows overlapping at left side of screen (Artur Guzik)
* fixed frozen while cycling through deleted files in playlist
* fixed status icon bugs (Artur Guzik)
* fixed skinned button bug
* fixed metacity support
* removed internal api usage from gme plugin
* updated Chinese Traditional translation (lon)
* updated Chinese Simplified translation (lon)
* updated German translation (Panagiotis Papadopoulos)

Version 0.5.2
* added feature to reset equalizer slider on middle click (Panagiotis Papadopoulos)
* added recent Psi+ notification support
* added Slovak translation (Ján Ďanovský)
* added EAC3, DTS, and Dolby TrueHD support (Makis Kalofolias)
* added automatic removal of spaces from the URL
* added mms metadata support
* fixed mouse cursor change bug
* fixed multi-selection bug
* fixed cmake build scripts
* fixed Alt-mouse moving bug
* fixed mms delays
* fixed pulseaudio support
* fixed jack support
* fixed text scroller title format
