@@ -553,6 +553,7 @@ Version 0.2.3
 * добавлена поддержка EAC3, DTS и Dolby TrueHD (Makis Kalofolias)
 * добавлено автоматическое удаление пробелов из URL
 * добавлена поддежка метаинформации в mms-потоках
+* улучшен выбор списков воспроизведения
 * исправлена ошибка в смене курсора мыши
 * исправлена ошибка выделения нескольких фрагментов
 * исправлена поддержка cmake
